2000-07-27  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWInput.m/.h: implemented (-valueInContext:) and (-resetAutoValue) to manage auto value attribute
	* GSWRadioButtonList.m/.h: fix to use the correct variable to set the selection binding.
	  Implemented auto value attribute
	* GSWPopUpButton.m/.h: fix to select object in the selection binding.
	  Implemented auto value attribute
	* GSWMailDelivery.m/.h: use the real sender in the sendmail command line
	  The following are changes made to support GDL2. Compile with -DGDL2
	* GSWSession.m: (-defaultEditingContext) create the default EOEditingContext
	* GSWComponent.m: (-setValue:forBinding:) if the parent doesn't provide the bindingName, attempts to set the value in the current component using takeValue:forKey:
	  (-valueForKeyBinding:) if the parent doesn't provide the bindingName, attempts to get the value from the current component using valueForKey:
	* GSWDisplayGroup.m/.h: implemented
	* NSObject+IVarAccess+PerfomSel.m: implemented (-getIVarNamed:) and (-setIVarNamed:withValue:) using EOKeyValueCoding protocol.
	  Now components have the responsibility to release its bindings.

2000-07-08  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWAdaptors/Apache/GNUmakefile: added -I/usr/include/apache in APACHEHEADERS
	* GSWAdaptors/common/GSWConfig.c: added directive name in GSWConfig_SetConfigFilePath errore message
	
2000-06-20  Karl Kraft <karl@nfox.com> 
  *  GSWCheckBoxList.m  Added support for the disabled key.

2000-06-20  Karl Kraft <karl@nfox.com>
  This is a series of minor bug fixes that I've been meaning to check in for some time.
  *  GSWAssociations.m  Added some exception handling when getting an ivar so that when this raises an exception the name of the ivar causing the exception can be recorded and reported.  The exception is then re-raised
  *  GSWPopupButton.m <option> tag should not have a </option> closing tag.